RESOLVED FIXED220051
Many websites crash under toDataURL() when enabling GPU process for DOM
https://bugs.webkit.org/show_bug.cgi?id=220051
Summary Many websites crash under toDataURL() when enabling GPU process for DOM
Wenson Hsieh
Reported 2020-12-20 18:08:56 PST
Attachments
Patch (16.14 KB, patch)
2020-12-21 08:14 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-12-21 08:14:46 PST
Simon Fraser (smfr)
Comment 2 2020-12-21 09:38:11 PST
Comment on attachment 416603 [details] Patch Can some tests be enabled on the bot after this?
Wenson Hsieh
Comment 3 2020-12-21 12:01:59 PST
(In reply to Simon Fraser (smfr) from comment #2) > Comment on attachment 416603 [details] > Patch > > Can some tests be enabled on the bot after this? So on closer inspection, it looks like GPU process for DOM is (implicitly) still disabled on the bots, due to the tiled core animation codepath not supporting GPU process (i.e. DrawingArea::supportsGPUProcessRendering), so we never hit this crash :/ I did, however, confirm that the codepaths are exercised by layout tests, so when we do either turn on GPUP for the Mac bots or switch them over to iOS, this patch will allow us to avoid skipping a dozen-or-so crashes that we would otherwise have while running fast/canvas and canvas.
EWS
Comment 4 2020-12-21 12:17:35 PST
Committed r271036: <https://trac.webkit.org/changeset/271036> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416603 [details].
Note You need to log in before you can comment on or make changes to this bug.