Many websites crash under toDataURL() when enabling GPU process for DOM https://bugs.webkit.org/show_bug.cgi?id=220051 <rdar://problem/72412509>

Reviewed by Simon Fraser.

Source/WebCore:

See WebKit ChangeLog for more details.

* platform/graphics/ImageBufferBackend.h:

Add traits for the PreserveResolution enum flag, so that it can be encoded over IPC.

Source/WebKit:

Three methods of canvas readback (`toDataURL`, `toData`, and `toBGRAData`) currently cause the web content
process to crash when enabling GPU process for DOM rendering. This is because we attempt to call into the
respective methods on the image buffer backend following r270342, which unconditionally fire release assertions.

Instead of using the proxy image buffer backend object in the web process, we need to communicate with the
platform `RemoteImageBuffer` in the GPU process. To do this, we add some plumbing through
`RemoteRenderingBackendProxy` and `RemoteRenderingBackend`, and override the `toDataURL`, `toData`, and
`toBGRAData` methods on `RemoteImageBufferProxy` in the web process to request data from the remote rendering
backend instead.

* GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::getDataURLForImageBuffer):
(WebKit::RemoteRenderingBackend::getDataForImageBuffer):
(WebKit::RemoteRenderingBackend::getBGRADataForImageBuffer):
* GPUProcess/graphics/RemoteRenderingBackend.h:
* GPUProcess/graphics/RemoteRenderingBackend.messages.in:
* Scripts/webkit/messages.py:
* WebProcess/GPU/graphics/RemoteImageBufferProxy.h:
* WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::getImageData):
(WebKit::RemoteRenderingBackendProxy::getDataURLForImageBuffer):
(WebKit::RemoteRenderingBackendProxy::getDataForImageBuffer):
(WebKit::RemoteRenderingBackendProxy::getBGRADataForImageBuffer):
* WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:


Canonical link: https://commits.webkit.org/232634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271036 268f45cc-cd09-0410-ab3c-d52691b4dbfc